Implemented OnboardingActivity and SplashActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,16 +29,16 @@
             android:exported="false" />
         <activity
             android:name=".Welcome.OnboardingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Welcome.SplashActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Welcome.SplashActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
