--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
                     [
                             file("src/main/res/layouts/").listFiles(),
                             'src/main/res/layouts',
-                            'src/main/res'
+                            'src/main/res', 'src\\main\\res', 'src\\main\\res\\layouts\\toolbar'
                     ]
         }
     }
