--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="in.ac.lnmiit.management">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,31 +12,46 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LNMIITManagement">
         <activity
+            android:name=".Bus_service.bus_booking_ticket"
+            android:exported="false" />
+        <activity
+            android:name=".Bus_service.bus_booking"
+            android:exported="false" />
+        <activity
+            android:name=".Bus_service.BusService_Feedback"
+            android:exported="false" />
+        <activity
+            android:name=".Bus_service.bus_service_past_booking"
+            android:exported="false" />
+        <activity
+            android:name=".Bus_service.BusServiceUserViewSchedule"
+            android:exported="false" />
+        <activity
             android:name=".Modules.DispensaryManagement"
             android:exported="false"
-            android:parentActivityName=".HomePage.HomeActivity"/>
+            android:parentActivityName=".HomePage.HomeActivity" />
         <activity
             android:name=".Modules.StaffLeaveManagement"
             android:exported="false"
-            android:parentActivityName=".HomePage.HomeActivity"/>
+            android:parentActivityName=".HomePage.HomeActivity" />
         <activity
             android:name=".Modules.HostelLeaveManagement"
             android:exported="false"
-            android:parentActivityName=".HomePage.HomeActivity"/>
+            android:parentActivityName=".HomePage.HomeActivity" />
         <activity
             android:name=".Modules.BusService"
             android:exported="false"
-            android:parentActivityName=".HomePage.HomeActivity"/>
+            android:parentActivityName=".HomePage.HomeActivity" />
         <activity
             android:name=".Modules.TimeTableGeneration"
             android:exported="false"
-            android:parentActivityName=".HomePage.HomeActivity"/>
+            android:parentActivityName=".HomePage.HomeActivity" />
         <activity
             android:name=".HomePage.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".Welcome.OnboardingActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
